# AI-Email-Triage-Env

./: Dockerfile  LICENSE  README.md  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  rewards.py  server.py  tasks.py
data/: emails.py
server/: app.py
static/: index.html
static/assets/: index-ClA6DM9x.js  index-SOIXoTHX.css
