[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"
[project]
name = "ai-email-triage"
version = "1.0.0"
description = "AI Email Triage OpenEnv Environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "openai==1.57.2",
    "httpx==0.28.1",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
]
[project.scripts]
serve = "server:app"
infer = "inference:main"
[tool.openenv]
modes = ["server", "inference"]
server_command = "uvicorn server:app --host 0.0.0.0 --port 7860"
inference_command = "python inference.py"